# Arkhe

./: .gitignore  CMakeLists.txt  README.md  pom.xml
ctk/cli/backend/FunctionPointer/src/main/cpp/: CMakeLists.txt
ctk/pluginFramework/service/debug/: CMakeLists.txt  pom.xml
ctk/src/main/cpp/: CMakeLists.txt
ctk/src/main/cpp/arkhe/ctk/: ScopedQPointer.cpp  ScopedQPointer.hpp  ctkExport.hpp
osgi/src/main/cpp/: CMakeLists.txt
osgi/src/main/cpp/arkhe/osgi/: osgi.cpp  osgi.hpp  version.h
osgi/src/main/cpp/arkhe/osgi/cli/: CmdLineModuleBackend.cpp  CmdLineModuleBackend.hpp  CmdLineModuleCache.cpp  CmdLineModuleCache.hpp  CmdLineModuleCachePrivate.cpp  CmdLineModuleCachePrivate.hpp  CmdLineModuleConcurrentRegister.cpp  CmdLineModuleConcurrentRegister.hpp  CmdLineModuleConcurrentUnRegister.cpp  CmdLineModuleConcurrentUnRegister.hpp  CmdLineModuleDefaultPathBuilder.cpp  CmdLineModuleDefaultPathBuilder.hpp  CmdLineModuleDefaultPathBuilderPrivate.cpp  CmdLineModuleDefaultPathBuilderPrivate.hpp  CmdLineModuleDescription.cpp  CmdLineModuleDescription.hpp  CmdLineModuleDescriptionPrivate.cpp  CmdLineModuleDescriptionPrivate.hpp  CmdLineModuleDirectoryWatcher.cpp  CmdLineModuleDirectoryWatcher.hpp  CmdLineModuleDirectoryWatcherPrivate.cpp  CmdLineModuleDirectoryWatcherPrivate.hpp  CmdLineModuleEnumerationParameterParser.cpp  CmdLineModuleEnumerationParameterParser.hpp  CmdLineModuleFileParameterParser.cpp  CmdLineModuleFileParameterParser.hpp  CmdLineModuleFrontend.cpp  CmdLineModuleFrontend.hpp  CmdLineModuleFrontendFactory.cpp  CmdLineModuleFrontendFactory.hpp  CmdLineModuleFuture.cpp  CmdLineModuleFuture.hpp  CmdLineModuleFutureCallOutEvent.cpp  CmdLineModuleFutureCallOutEvent.hpp  CmdLineModuleFutureCallOutInterface.cpp  CmdLineModuleFutureCallOutInterface.hpp  CmdLineModuleFutureInterface.cpp  CmdLineModuleFutureInterface.hpp  CmdLineModuleFutureInterfacePrivate.cpp  CmdLineModuleFutureInterfacePrivate.hpp  (+56 more)
osgi/src/main/cpp/arkhe/osgi/core/: AbstractFactory.cpp  AbstractFactory.hpp  AbstractFactoryFileBasedItem.cpp  AbstractFactoryFileBasedItem.hpp  AbstractFactoryItem.cpp  AbstractFactoryItem.hpp  AbstractFileBasedFactory.cpp  AbstractFileBasedFactory.hpp  AbstractLibraryFactory.cpp  AbstractLibraryFactory.hpp  AbstractObjectFactory.cpp  AbstractObjectFactory.hpp  AbstractPluginFactory.cpp  AbstractPluginFactory.hpp  AbstractQObjectFactory.cpp  AbstractQObjectFactory.hpp  BackTrace.cpp  BackTrace.hpp  BacktraceCollector.cpp  BacktraceCollector.hpp  BacktraceCollectorPrivate.cpp  BacktraceCollectorPrivate.hpp  BinaryFileDescriptor.cpp  BinaryFileDescriptor.hpp  BooleanMapper.cpp  BooleanMapper.hpp  Callback.cpp  Callback.hpp  CommandLineParser.cpp  CommandLineParser.hpp  CrashHandler.cpp  CrashHandler.hpp  Exception.cpp  Exception.hpp  FactoryLibraryItem.cpp  FactoryLibraryItem.hpp  FactoryObjectItem.cpp  FactoryObjectItem.hpp  FactoryPluginItem.cpp  FactoryPluginItem.hpp  (+12 more)
osgi/src/main/cpp/arkhe/osgi/services/: ApplicationDescriptor.cpp  ApplicationDescriptor.hpp  ApplicationException.cpp  ApplicationException.hpp  ApplicationHandle.cpp  ApplicationHandle.hpp  ApplicationLauncher.cpp  ApplicationLauncher.hpp  AttributeDefinition.cpp  AttributeDefinition.hpp  Configuration.cpp  Configuration.hpp  ConfigurationAdmin.cpp  ConfigurationAdmin.hpp  ConfigurationEvent.cpp  ConfigurationEvent.hpp  ConfigurationException.cpp  Event.cpp  (+26 more)
osgi/src/test/cpp/: CMakeLists.txt
osgi/src/test/cpp/arkhe/osgi/: osgiTest.cpp  osgiTest.hpp
src/main/cpp/: CMakeLists.txt
src/main/cpp/arkhe/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/main/cpp/arkhe/core/json/: Array.cpp  Array.hpp  AtomicInt.cpp  Base.cpp  Base.hpp  Data.cpp  Data.hpp  Entry.cpp  Entry.hpp  Header.cpp  Json.cpp  Json.hpp  JsonArray.cpp  JsonArray.hpp  JsonDocument.cpp  JsonObject.cpp  JsonParseError.cpp  JsonValue.cpp  JsonValue.hpp  JsonValuePtr.cpp  JsonValuePtr.hpp  JsonValueRef.cpp  JsonValueRefPtr.cpp  JsonValueRefPtr.hpp  LittleEndianBitfield.cpp  LittleEndianBitfield.hpp  LittleEndianSignedBitfield.cpp  Object.cpp  Object.hpp  Parser.cpp  Parser.hpp  SharedString.cpp  String.cpp  String.hpp  Value.cpp  Value.hpp
src/main/cpp/arkhe/core/logger/: Logger.cpp  Logger.hpp  LoggingCategory.cpp  LoggingCategory.hpp
widgets/: CMakeLists.txt  COPYING.txt  INSTALL.txt  LICENSE.GPL3.txt  README.txt
widgets/demos/simpledemo/: CMakeLists.txt  inputpanel.cpp  inputpanel.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  outputpanel.cpp  outputpanel.hpp  view.cpp
widgets/src/main/cpp/widgets/: abstractscale.cpp  abstractscale_meta.cpp  adjustedlinearlayout.cpp  alignment.cpp  alignment_meta.cpp  button.cpp  button_meta.cpp  circularscale.cpp  circularscale_meta.cpp  component.cpp  component_meta.cpp  cursor.cpp  cursor_meta.cpp  direction_meta.cpp  field.cpp  field_meta.cpp  fontlcdrenderer.cpp  gauge.cpp  gauge_meta.cpp  instrument.cpp  instrument_meta.cpp  instrumentcentrallayout.cpp  instrumentskin.cpp  label.cpp  label_meta.cpp  layoututils.cpp  lcd.cpp  lcd_meta.cpp  lcdlabel.cpp  lcdlabel_meta.cpp  lcdpixeldigit.cpp  lcdrenderer.cpp  led.cpp  led_meta.cpp  levelindicator.cpp  levelindicator_meta.cpp  linearscale.cpp  linearscale_meta.cpp  numericfield.cpp  numericfield_meta.cpp  (+27 more)
widgets/src/main/cpp/widgets/gics/: abstractscale.hpp  adjustedlinearlayout.hpp  alignment.hpp  button.hpp  circularscale.hpp  component.hpp  config.hpp  cursor.hpp  direction.hpp  field.hpp  fontlcdrenderer.hpp  gauge.hpp  instrument.hpp  label.hpp  lcd.hpp  lcdlabel.hpp  lcdrenderer.hpp  led.hpp  levelindicator.hpp  linearscale.hpp  math.hpp  numericfield.hpp  numericlabel.hpp  panel.hpp  picture.hpp  pixellcdrenderer.hpp  qt.hpp  radiallayout.hpp  rail.hpp  skinmanager.hpp  slider.hpp  state.hpp  tag.hpp  tank.hpp  textfield.hpp  textlabel.hpp  validationmode.hpp
widgets/src/main/cpp/widgets/goost/: length.hpp  pimplptr.hpp  pimplptr.inl  sharedpimplptr.hpp  sharedpimplptr.inl
widgets/src/main/cpp/widgets/qtstatemachine_solution/: CMakeLists.txt  README.TXT
widgets/src/main/resources/: defaultskin.xml  resources.qrc
(+288 files in other folders)
